fixed button alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@
 
 .deletebutton {
   margin-top: 1em;
-  margin-left: 7em;
+  float: right;
 }
 
 html,
